tests/compile_fail/pod_vec_field.stderr
error[E0277]: the trait bound `Vec<u8>: hopper::hopper_runtime::hopper_native::bytemuck::Pod` is not satisfied
  --> tests/compile_fail/pod_vec_field.rs:11:1
   |
11 | #[pod]
   | ^^^^^^ the trait `hopper::hopper_runtime::hopper_native::bytemuck::Pod` is not implemented for `Vec<u8>`
   |
   = help: the following other types implement trait `hopper::hopper_runtime::hopper_native::bytemuck::Pod`:
             ()
             AccountHeader
             BadHeap
             ManuallyDrop<T>
             Option<T>
             PhantomData<T>
             PhantomPinned
             SegmentDescriptor
           and $N others
note: required by a bound in `__FieldPodProof`
  --> tests/compile_fail/pod_vec_field.rs:11:1
   |
11 | #[pod]
   | ^^^^^^ required by this bound in `__FieldPodProof`
   = note: this error originates in the attribute macro `pod` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BadHeap: std::marker::Copy` is not satisfied
  --> tests/compile_fail/pod_vec_field.rs:14:12
   |
14 | pub struct BadHeap {
   |            ^^^^^^^ the trait `std::marker::Copy` is not implemented for `BadHeap`
   |
note: required by a bound in `hopper::hopper_runtime::hopper_native::bytemuck::Pod`
  --> $CARGO/bytemuck-$VERSION/src/pod.rs
   |
   | pub unsafe trait Pod: Zeroable + Copy + 'static {}
   |                                  ^^^^ required by this bound in `Pod`

error[E0277]: the trait bound `BadHeap: std::marker::Copy` is not satisfied
  --> tests/compile_fail/pod_vec_field.rs:14:12
   |
14 | pub struct BadHeap {
   |            ^^^^^^^ the trait `std::marker::Copy` is not implemented for `BadHeap`
   |
note: required by a bound in `hopper::prelude::Pod`
  --> crates/hopper-native/src/pod.rs
   |
   | pub unsafe trait Pod: Copy + Sized + bytemuck::Pod + bytemuck::Zeroable {}
   |                       ^^^^ required by this bound in `Pod`

error[E0080]: evaluation panicked: #[hopper::pod] struct `BadHeap` must be alignment-1 (use Hopper wire types such as WireU64, WireI32, or TypedAddress<T> instead of raw u64/i32/Pubkey).
  --> tests/compile_fail/pod_vec_field.rs:11:1
   |
11 | #[pod]
   | ^^^^^^ evaluation of `_` failed here
